v7 enhancements